--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "ML project with FastAPI interface"
 authors = ["Alexander <as.frantsev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "ml_fastapi"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -17,6 +16,11 @@ jinja2 = "^3.1.2"
 loguru = "^0.7.2"
 pandas = "^2.1.3"
 scikit-learn = "^1.3.2"
+opencv-python = "^4.8.1.78"
+torch = "^2.1.2"
+numpy = "^1.26.2"
+art = "^6.1"
+ultralytics = "^8.0.231"
 
 [tool.poetry.group.dev.dependencies]
 pandas = "^2.1.3"
