new notebooks for facenet

--- a/.gitignore
+++ b/.gitignore
@@ -159,11 +159,15 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .vscode/
+models/
 
 # Other files
 # *.jpg
 *.png
 *.mp4
+*.webm
 
 # Models
 *.pt
+*.joblib
+*.weights
